--- a/netflix/Netflix Tutorial.ipynb
+++ b/netflix/Netflix Tutorial.ipynb
@@ -56,7 +56,7 @@
     "- description\n",
     "- date_added\n",
     "\n",
-    "From which there would be one main class, `Netflix`, one subdocument, `Country` and two Enums, `Content_Type` and `Rating`."
+    "From which there would be one main class, `Netflix`, and two Enums, `Content_Type` and `Rating`."
    ]
   },
   {
@@ -72,15 +72,15 @@
     "    _schema = my_schema\n",
     "    title: str\n",
     "    type_of: \"Content_Type\"\n",
-    "    director: str\n",
-    "    cast: str\n",
-    "    country: \"Country\"\n",
+    "    director: Optional[str]\n",
+    "    cast: Optional[str]\n",
+    "    country: Optional[str]\n",
     "    release_year: int\n",
     "    rating: \"Rating\"\n",
     "    duration: str\n",
     "    listed_in: str\n",
     "    description: str\n",
-    "    date_added: str\n",
+    "    date_added: Optional[str]\n",
     "\n",
     "class Content_Type(EnumTemplate):\n",
     "    _schema = my_schema\n",
@@ -104,12 +104,7 @@
     "    G = ()\n",
     "    NC_17 = \"NC-17\"\n",
     "    TV_Y7_FV = \"TV-Y7-FV\"\n",
-    "    UR = ()\n",
-    "\n",
-    "class Country(DocumentTemplate):\n",
-    "    _subdocument = []\n",
-    "    _schema = my_schema\n",
-    "    name: str"
+    "    UR = ()"
    ]
   },
   {
@@ -118,7 +113,7 @@
    "metadata": {},
    "source": [
     "## Reading and importing data\n",
-    "Dataset will be read using `pandas`and inserted into TerminusDB by calling the `insert_data` fucntion. To avoid `Connection Timed Out` errors, dataset will be read in chunks. Every chunk will be processed individually through the `read_data` function, where some additional validations will be made before importing the data and `NA` values will be replaced with `''`."
+    "Dataset will be read using `pandas`and inserted into TerminusDB by calling the `insert_data` fucntion. To avoid `Connection Timed Out` errors, dataset will be read in chunks. Every chunk will be processed individually through the `read_data` function, where some additional validations will be made before importing the data."
    ]
   },
   {
@@ -140,32 +135,13 @@
     "def read_data(csv):\n",
     "    records = []\n",
     "    df = pd.read_csv(csv)\n",
-    "    selection = df.fillna('')\n",
-    "    for index, row in selection.iterrows():\n",
+    "    for index, row in df.iterrows():\n",
     "\n",
     "        type_of = row['type'].replace(\" \", \"_\")\n",
-    "        rating = \"NR\" if row['rating'] == \"\" else row['rating'].replace(\"-\", \"_\")\n",
+    "        rating = \"NR\" if pd.isna(row['rating']) else row['rating'].replace(\"-\", \"_\")\n",
     "\n",
-    "        #Country\n",
-    "        country = Country()\n",
-    "        country.name = row['country']\n",
-    "        records.append(country)\n",
-    "\n",
-    "        # Netflix\n",
-    "        netflix = Netflix()\n",
-    "        netflix.title = row['title']\n",
-    "        netflix.type_of = Content_Type[type_of]\n",
-    "        netflix.director = row['director']\n",
-    "        netflix.cast = row['cast']\n",
-    "        netflix.country = country\n",
-    "        netflix.release_year = row['release_year']\n",
-    "        netflix.rating = Rating[rating]\n",
-    "        netflix.duration = row['duration']\n",
-    "        netflix.listed_in = row['listed_in']\n",
-    "        netflix.description = row['description']\n",
-    "        netflix.date_added = row['date_added']\n",
-    "        records.append(netflix)\n",
-    "\n",
+    "        records.append(Netflix(title=row['title'], type_of=Content_Type[type_of], director=str(row['director']), cast=str(row['cast']), country=str(row['country']), release_year=row['release_year'], rating=Rating[rating], duration=row['duration'], listed_in=row['listed_in'], description=row['description'], date_added=str(row['date_added'])))\n",
+    "    \n",
     "    return records"
    ]
   },
@@ -175,7 +151,7 @@
    "metadata": {},
    "source": [
     "## Database connection\n",
-    "You must established a connection to either a local instance of TerminusDB Server (running at http://127.0.0.1:6363) or a TerminusX account, then create a database named `Netflix`. The schema defined above is inserted into TerminusDB by calling the `insert_document` method defined in the Python client. Finally, `insert data` function is called and first 10 records of the `Netfix` database are printed. The `team` variable refers to the team associated with your TerminusX account, the value must be replaced accordingly."
+    "You must established a connection to either a local instance of TerminusDB Server (running at http://127.0.0.1:6363) or a TerminusX account, then create a database named `Netflix`. The schema defined above is inserted into TerminusDB by calling the `insert_document` method defined in the Python client. Finally, `insert data` function is called and first 10 records of the `Netflix` database are printed. The `team` variable refers to the team associated with your TerminusX account, the value must be replaced accordingly. An API key is required to use TerminusX. Follow instructions [here](https://docs.terminusdb.com/v10.0/#/terminusx/get-your-api-key) to get your API key. Don't forget to set the `TERMINUSDB_ACCESS_TOKEN` environment variable and assign your API key as value."
    ]
   },
   {
@@ -188,30 +164,147 @@
     "if __name__ == \"__main__\":\n",
     "    db_id = \"Netflix\"\n",
     "    url = \"netflix.csv\"\n",
-    "    #client = WOQLClient(\"http://127.0.0.1:6363\")\n",
-    "    #client.connect()\n",
     "\n",
     "    team = \"team\"\n",
     "    client = WOQLClient(\"https://cloud.terminusdb.com/team/\")\n",
-    "\n",
-    "    client.connect(team=team, use_token=True)\n",
     "    \n",
     "    try:\n",
-    "        client.create_database(db_id, team=team, label = \"Netflix Graph\", description = \"Create a graph with Netflix data\")\n",
+    "        client.connect(team=team, use_token=True)\n",
+    "        client.create_database(db_id, label = \"Netflix Graph\", description = \"Create a graph with Netflix data\")\n",
     "    except Exception:\n",
-    "        client.set_db(db_id)\n",
-    "    client.insert_document(my_schema.to_dict(),\n",
-    "                           graph_type=\"schema\",\n",
-    "                           commit_msg=\"I am checking in the schema\")\n",
+    "        client.connect(db=db_id, team=team, use_token=True)\n",
+    "    \n",
+    "    schema.commit(client, commit_msg = \"Adding Netflix Schema\")\n",
+    "    \n",
     "    insert_data(client, url)\n",
     "    results = client.get_all_documents(graph_type=\"instance\", count=10)\n",
     "    print(\"\\nRESULTS\\n\", list(results))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "462e0f4c",
+   "metadata": {},
+   "source": [
+    "## Query documents\n",
+    "Get all documents:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d6f7c2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "documents = client.get_all_documents()\n",
+    "\n",
+    "# documents comes back as a iterable that can be convert into a list\n",
+    "print(\"All documents\")\n",
+    "print(list(documents))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfe0c012",
+   "metadata": {},
+   "source": [
+    "Get a specific document using `query_document`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f03dfb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matches = client.query_document({\"@type\"  : \"Netflix\",\n",
+    "                                 \"type_of\": \"Movie\",\n",
+    "                                 \"release_year\": \"2020\"})\n",
+    "\n",
+    "# matches comes back as a iterable that can be convert into a list\n",
+    "print(list(matches))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4038762f",
+   "metadata": {},
+   "source": [
+    "If you want to get a specific number of records, just add `count=number` when calling both functions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c434149c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "documents = client.get_all_documents(count=10)\n",
+    "\n",
+    "matches = client.query_document({\"@type\"  : \"Netflix\",\n",
+    "                                 \"type_of\": \"Movie\",\n",
+    "                                 \"release_year\": \"2020\"}, count=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb3addb8",
+   "metadata": {},
+   "source": [
+    "## Commit history\n",
+    "Get the whole commit history:\n",
+    "\n",
+    "Check the [documentation](https://terminusdb.github.io/terminusdb-client-python/woqlClient.html) for more information."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fc4e468",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.get_commit_history()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d45dfab4",
+   "metadata": {},
+   "source": [
+    "## Branches\n",
+    "- Create branch\n",
+    "- Delete branch\n",
+    "- Get all branches\n",
+    "- Switch branches\n",
+    "\n",
+    "Check the [documentation](https://terminusdb.github.io/terminusdb-client-python/woqlClient.html) for more information."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2981f172",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_branch(\"some_branch\", empty=False)\n",
+    "# Create an empty branch if true (no starting commit)\n",
+    "\n",
+    "client.delete(\"some_branch\")\n",
+    "\n",
+    "client.get_all_branches()\n",
+    "\n",
+    "client.checkout(\"some_branch\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -225,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
